added the fast block

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple wabsite</title>
+    <link rel="stylesheet" href="style/block.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My fast wabsite</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum repellendus, modi ad neque nisi, cupiditate vero non dicta magni iusto temporibus ipsa obcaecati. Consequuntur totam illo doloribus laboriosam sint praesentium?</p>
+    </div>
 </body>
 </html>
