--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <h3>My fast wabsite</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum repellendus, modi ad neque nisi, cupiditate vero non dicta magni iusto temporibus ipsa obcaecati. Consequuntur totam illo doloribus laboriosam sint praesentium?</p>
     </div>
+    <div> <h3>My fast wabsite</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum repellendus, modi ad neque nisi, cupiditate vero non dicta magni iusto temporibus ipsa obcaecati. Consequuntur totam illo doloribus laboriosam sint praesentium?</p></div>
+        <div>
+            <h3> bad man</h3>
+            <img src="imges/Blouse Designs.jpg" >
+        </div>
 </body>
 </html>
